development
-----------
- Delete unneeded development code in static.py.

1.0rc1  (2010-01-26)
--------------------

- 'pyramid_sqla' application template supports commit veto feature in
  repoze.tm2 1.0b1.
- Add production.ini to application template.
- Delete stray files in application template that were accidentally included.

0.2  (2011-01-19)
-----------------

- Pyramid 1.0a10 spins off view handler support to 'pyramid_handlers' package.
- 'pyramid_sqla' application template depends on Pyramid>=1.0a10.


0.1  (2011-01-12)
-----------------

- Initial release.
- Warning: a change in Pyramid 1.0a10 broke applications created using the
  this version's application template. To run existing applications under Pyramid
  1.0a10 and later, add a 'pyramid_handlers' dependency to the ``requires``
  list in setup.py and reinstall the application.